[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinecone-fire"
version = "0.1.0"
description = "Pine Ecosystem Carbon and Economics RX Fire Analysis"
readme = "README.md"
authors = [
    {name = "NASA EarthRISE", email = "contact@earthrise.nasa.gov"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "fire",
    "carbon",
    "remote-sensing",
    "google-earth-engine",
    "forestry",
    "prescribed-fire",
    "biomass",
    "economics",
]
dependencies = [
    "earthengine-api>=0.1.380",
    "geemap>=0.30.0",
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "pyyaml>=6.0",
    "seaborn>=0.12.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "sphinx>=7.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/NASA-EarthRISE/PINECONe"
Documentation = "https://nasa-earthrise.github.io/PINECONe/"
Repository = "https://github.com/NASA-EarthRISE/PINECONe"
Issues = "https://github.com/NASA-EarthRISE/PINECONe/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
